force-app/main/default/objects/Order/fields/OrderQuantity_DKL__c.field-meta.xml
<CustomField>
    <fullName>OrderQuantity_DKL__c</fullName>
    <label>Order Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>