force-app/main/default/objects/Order/fields/RemainingQuantity_DKL__c.field-meta.xml
<CustomField>
    <fullName>RemainingQuantity_DKL__c</fullName>
    <formula>OrderQuantity_DKL__c  -  TotalQuantityDispatched_DKL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>