force-app/main/default/objects/Order/fields/TotalDispatchedValue_DKL__c.field-meta.xml
<CustomField>
    <fullName>TotalDispatchedValue_DKL__c</fullName>
    <label>Total Dispatched Value</label>
    <summarizedField>OrderItem.ActualPrice_DKL__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>