force-app/main/default/objects/Order/fields/TotalOrderDispatched_DKL__c.field-meta.xml
<CustomField>
    <fullName>TotalOrderDispatched_DKL__c</fullName>
    <label>Total Order Dispatched</label>
    <summarizedField>OrderItem.ActualQuantity_DKL__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>