force-app/main/default/objects/Order/fields/TotalQuantityDispatched_DKL__c.field-meta.xml
<CustomField>
    <fullName>TotalQuantityDispatched_DKL__c</fullName>
    <label>Total Quantity Dispatched</label>
    <summarizedField>Loading_Advice__c.RollUpQuantity_DKL__c</summarizedField>
    <summaryFilterItems>
        <field>Loading_Advice__c.LogisticsEmailSent_DKL__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Loading_Advice__c.Approval_Status_DKL__c</field>
        <operation>notEqual</operation>
        <value>Rejected</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Loading_Advice__c.Status_DKL__c</field>
        <operation>notEqual</operation>
        <value>Diverted</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Loading_Advice__c.Status_DKL__c</field>
        <operation>notEqual</operation>
        <value>Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>Loading_Advice__c.Order_DKL__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>